# ecsctl

./: .cursorrules  .env.example  .gitignore  README.md  build.sh  pyproject.toml
.github/workflows/: build-release.yml  build.yml  compile.yml  release.yml
ecsctl/: __init__.py  aws_client.py  cli.py  config.py  ecs_controller.py  exceptions.py  utils.py
tests/: conftest.py  test_aws_client.py  test_config.py  test_ecs_controller.py
